--- a/styles/styles.css
+++ b/styles/styles.css
@@ -166,7 +166,7 @@ h1, h2, h3, h4, h5
 }
 
 /* Mobile */
-@media only screen and (max-width: 576px) {
+@media only screen and (max-width: 768px) {
   main .section > div {
     width: var(--section-width-mobile);
     margin: 0 auto;
@@ -180,7 +180,7 @@ h1, h2, h3, h4, h5
 }
 
 /* All except mobile */
-@media only screen and (min-width: 576px) {
+@media only screen and (min-width: 768px) {
   /* Back to top button */
   main .section.back-to-top.active[data-section-status='loaded'],
   main .section.back-to-top.active::before, 
@@ -206,15 +206,16 @@ h1, h2, h3, h4, h5
 }
 
 /* Tablet Small */
-@media only screen and (min-width: 576px) and (max-width: 768px) {
+
+/* @media only screen and (min-width: 576px) and (max-width: 768px) {
   main .section > div {
     width: var(--section-width-tablet-small);
     margin: 0 auto;
   }
-}
+} */
 
 /* Tablet Medium */
-@media only screen and (min-width: 768px) and (max-width: 992px) {
+@media only screen and (min-width: 768px) and (max-width: 1200px) {
   main{
     padding-top: var(--nav-height-mobile)
   }
@@ -224,16 +225,14 @@ h1, h2, h3, h4, h5
   }
 
   main .section > div {
-    width: var(--section-width-tablet-large);
+    width: var(--section-width-tablet-small);
     margin: 0 auto;
   }
 }
 
 /* Tablet Large */
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
-  /* :root{
-    --section-width: 928px;
-  } */
+
+/* @media only screen and (min-width: 992px) and (max-width: 1200px) {
   main .section > div {
     width: var(--section-width-tablet-large);
     margin: 0 auto;
@@ -246,7 +245,7 @@ h1, h2, h3, h4, h5
   main .section {
     padding: 48px auto;
   }
-}
+} */
 
 /* All except desktop */
 @media only screen and (max-width: 1200px) {
